# explore-sitsformer

./: .flake8  .gitignore  .mcp.json  .pre-commit-config.yaml  CONTRIBUTING.md  OVERVIEW.md  README.md  SECURITY.md  TECHNICAL_OVERVIEW.md  bandit_results.json  benchmark_results.json  pyproject.toml  requirements.txt
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REPOSITORY_MANAGEMENT.md  dependabot.yml  dependency-labeler.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  documentation.yml  feature_request.yml  question.yml
.github/scripts/: setup-labels.sh
.github/workflows/: auto-label.yml  benchmarks.yml  ci.yml  dependencies.yml  docs.yml  quality.yml  release.yml  security.yml
benchmark_results/: README.md
configs/: default.yaml  large_model.yaml  small_model.yaml
docs/: changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  quickstart.rst
docs/_static/: .gitkeep
docs/api/: modules.rst  sitsformer.data.rst  sitsformer.evaluation.rst  sitsformer.models.rst  sitsformer.rst  sitsformer.scripts.rst  sitsformer.training.rst  sitsformer.utils.rst
docs/examples/: change_detection.rst  crop_monitoring.rst  index.rst  land_cover_classification.rst
docs/tutorials/: advanced_configurations.rst  data_preparation.rst  deployment.rst  fine_tuning.rst  index.rst  model_evaluation.rst  model_training.rst
notebooks/: data_exploration.ipynb
src/sitsformer/: __init__.py
src/sitsformer/data/: __init__.py  dataset.py  utils.py
src/sitsformer/evaluation/: __init__.py  metrics.py
src/sitsformer/models/: __init__.py  sits_former.py
src/sitsformer/scripts/: __init__.py  evaluate.py  inference.py  train.py
src/sitsformer/training/: __init__.py  trainer.py
src/sitsformer/utils/: __init__.py  config.py  helpers.py
tests/: __init__.py  test_data.py  test_model.py
tests/benchmarks/: __init__.py  conftest.py  test_data_benchmarks.py  test_model_benchmarks.py  test_training_benchmarks.py
tests/profiling/: __init__.py  memory_test.py
